--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
         "symfony/validator": "^3.2",
         "symfony/config": "^3.2",
         "symfony/translation": "^3.2",
-        "symfony/var-dumper": "^3.2"
+        "symfony/var-dumper": "^3.2",
+        "doctrine/dbal": "~2.2"
     }
 }
